Homepage update with link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title> TicketApp Home Page</title>
 </head>
 <body>
-
+	<h1>Welcome to Ticket App</h1>
+	<p>You can start purchasing your tickets here blah blah</p>
 </body>
 </html>
